--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="/images/favicon.ico" rel="icon" />
+<link href="images/favicon.ico" rel="icon" />
 <title>Abdullah Shahid</title>
 <meta name="description" content="Simone is responsive bootstrap 5 one page personal portfolio html template.">
 <!-- <meta name="author" content="harnishdesign.net"> -->
@@ -532,15 +532,15 @@
         <div class="owl-carousel owl-theme" data-loop="true" data-nav="false" data-autoplay="false" data-margin="25" data-stagepadding="0" data-slideby="1" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2">
           <div class="item">
             <div class="bg-light rounded p-5">
-              <div class="d-flex align-items-center mt-auto mb-4"> <img class="img-fluid rounded-circle border d-inline-block w-auto" src="/images/client_1.jpg" alt="">
-                <p class="ms-3 mb-0"><strong class="d-block text-dark fw-600">Atish</strong> <span class="text-muted fw-500 w-50"> <img src="/images/flags/india-flag.png" alt=""style="width:40% !important"></span></p>
+              <div class="d-flex align-items-center mt-auto mb-4"> <img class="img-fluid rounded-circle border d-inline-block w-auto" src="images/client_1.jpg" alt="">
+                <p class="ms-3 mb-0"><strong class="d-block text-dark fw-600">Atish</strong> <span class="text-muted fw-500 w-50"> <img src="images/flags/india-flag.png" alt=""style="width:40% !important"></span></p>
               </div>
               <p class="text-dark fw-500 mb-4">“Abdullah delivered the work beyond my expectations. He truly nailed it. I got better results than what I asked for. Communication was great, and he listened to every detail with patience. As I worked with him, I felt he had amazing experience in Python, and working on automation projects. I would highly recommend Abdullah to anyone needs any automation or Python jobs to get done.”</p>
               <span class="text-2"> <i class="fas fa-star text-warning"></i> <i class="fas fa-star text-warning"></i> <i class="fas fa-star text-warning"></i> <i class="fas fa-star text-warning"></i> <i class="fas fa-star text-warning"></i> </span> </div>
           </div>
           <div class="item">
             <div class="bg-light rounded p-5">
-              <div class="d-flex align-items-center mt-auto mb-4"> <img class="img-fluid rounded-circle border d-inline-block w-auto" src="/images/icons8-user-50.png" alt="">
+              <div class="d-flex align-items-center mt-auto mb-4"> <img class="img-fluid rounded-circle border d-inline-block w-auto" src="images/icons8-user-50.png" alt="">
                 <p class="ms-3 mb-0"><strong class="d-block text-dark fw-600">Shayan</strong> <span class="text-muted fw-500"><img src="images/flags/usa-flag.png" alt=""style="width:40% !important"></span></p>
               </div>
               <p class="text-dark fw-500 mb-4">“Abdullah did a great job! He helped me with a large project and was able to customize it around the requirements. He is great to work with and communicates very well. I look forward to collaborating with Abdullah on future projects.”</p>
@@ -548,7 +548,7 @@
           </div>
           <div class="item">
             <div class="bg-light rounded p-5">
-              <div class="d-flex align-items-center mt-auto mb-4"> <img class="img-fluid rounded-circle border d-inline-block w-auto" src="/images/icons8-user-50.png" alt="">
+              <div class="d-flex align-items-center mt-auto mb-4"> <img class="img-fluid rounded-circle border d-inline-block w-auto" src="images/icons8-user-50.png" alt="">
                 <p class="ms-3 mb-0"><strong class="d-block text-dark fw-600">Huda</strong> <span class="text-muted fw-500"><img src="images/flags/sa-flag.png" alt=""style="width:40% !important"></span></p>
               </div>
               <p class="text-dark fw-500 mb-4">"Abdullah is very excellent ,precise, passion in his work, and he was very cooperative with me.He got what I want in specific, and did it.Also, he did explain everything I need to know so I could use the script efficiently; since I have a simple technical knowledge.I would like to thank him.I will not hesitate to work with him again.”</p>
@@ -777,12 +777,12 @@
 <!-- <script src="https://harnishdesign.net/demo/html/simone/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>  -->
 
 <!-- Style Switcher --> 
-<!-- <script src="https://harnishdesign.net/demo/html/simone/js/switcher.min.js"></script>  -->
-<script src="/js/switcher.min.js"></script> 
+<!-- <script src="https://harnishdesign.net/demo/html/simonejs/switcher.min.js"></script>  -->
+<script src="js/switcher.min.js"></script> 
 
 <!-- Custom Script --> 
-<!-- <script src="https://harnishdesign.net/demo/html/simone/js/theme.js"></script> -->
-<script src="/js/theme.js"></script>
+<!-- <script src="https://harnishdesign.net/demo/html/simonejs/theme.js"></script> -->
+<script src="js/theme.js"></script>
 
 </body>
 
