--- a/index.html
+++ b/index.html
@@ -781,7 +781,7 @@
 <script src="js/switcher.min.js"></script> 
 
 <!-- Custom Script --> 
-<!-- <script src="https://harnishdesign.net/demo/html/simonejs/theme.js"></script> -->
+<script src="https://harnishdesign.net/demo/html/simonejs/theme.js"></script>
 <script src="js/theme.js"></script>
 
 </body>
