--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li class="nav-item"><a class="nav-link smooth-scroll active" href="#home">Home</a></li>
             <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About Me</a></li>
             <li class="nav-item"><a class="nav-link smooth-scroll" href="#services">What I Do</a></li>
-            <li class="nav-item"><a class="nav-link smooth-scroll" href="#skills">Frameworks</a></li>
+            <!-- <li class="nav-item"><a class="nav-link smooth-scroll" href="#skills">Frameworks</a></li> -->
             <li class="nav-item"><a class="nav-link smooth-scroll" href="#resume">Resume</a></li>
             <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
             <li class="nav-item"><a class="nav-link smooth-scroll" href="#testimonial">Testimonial</a></li>
@@ -75,7 +75,7 @@
           </ul>
         </div>
         <ul class="social-icons social-icons-muted social-icons-sm mt-lg-auto ms-auto ms-lg-0 d-flex">
-          <li class="social-icons-facebook"><a data-bs-toggle="tooltip" title="Upwork" href="http://www.upwork.com/" target="_blank"><img src="images/upwork-icon.png" alt=""></a></li>
+          <li class="social-icons-upwork"><a data-bs-toggle="tooltip" title="Upwork" href="https://www.upwork.com/freelancers/~01ec98ab1046ec8815?viewMode=1" target="_blank"><img src="images/upwork-icon.png" alt=""></a></li>
           <li class="social-icons-fiverr"><a data-bs-toggle="tooltip" title="Fiverr" href="https://www.fiverr.com/mian_ab" target="_blank"><svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="20px" height="20px"><circle cx="24" cy="24" r="20" fill="#66bb6a"/><path fill="#fff" d="M35.066,22.035v-0.959h-1.821l-0.8-0.014c-0.684,0-1.151,0.45-1.335,0.974v-0.959h-2.039V27.3 h2.039v-1.334v-2.066c0-0.62,0.503-1.123,1.123-1.123h0.795v4.523h2.039v-1.334v-2.066c0-0.62,0.503-1.123,1.123-1.123h1.012v-1.7 l-0.8-0.014C35.718,21.061,35.25,21.512,35.066,22.035z M20.56,21.206l-1.094,3.597l-1.093-3.597h-2.039l2.215,6.223h0.12h1.597 h0.12l2.213-6.223H20.56z M12.23,21.206v-0.415c0-0.364,0.294-0.658,0.658-0.658h1.287v-1.706h-1.767 c-1.223,0-2.216,0.991-2.216,2.216v0.564H9v1.649h1.192v4.572h2.039v-4.572h1.944v4.572h2.039v-4.572v-1.649h-2.039H12.23V21.206z M25.424,21.122h-0.248c-1.67,0-3.024,1.354-3.024,3.024v0.342c0,1.67,1.354,3.024,3.024,3.024h0.552 c1.143,0,2.122-0.706,2.524-1.705l-1.798-0.525c0,0-0.215,0.616-0.965,0.616c-0.847,0-1.295-0.463-1.354-0.989l0,0v-0.003 c-0.004-0.038-0.006-0.077-0.006-0.115h2.3h2.022v-0.643C28.448,22.476,27.094,21.122,25.424,21.122z M24.13,23.59 c0.025-0.559,0.485-1.006,1.051-1.006h0.194c0.565,0,1.026,0.446,1.051,1.006H24.13z"/><circle cx="38.852" cy="26.305" r="1.268" fill="#263238"/></svg></a></li>
           <li class="social-icons-linkedin"><a data-bs-toggle="tooltip" title="LinkedIn" data-bs-placement="top" href="https://www.linkedin.com/in/imabdi" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
           <li class="social-icons-github"><a data-bs-toggle="tooltip" title="GitHub" data-bs-placement="top" href="http://www.google.com/" target="_blank" ><i class="fab fa-github"></i></a></li>
@@ -142,7 +142,7 @@
                 <!-- <li class=""><span class="fw-600 me-2">Age:</span>25</li> -->
                 <li class="border-0"><span class="fw-600 me-2">From:</span>Lahore, Pakistan</li>
               </ul>
-              <a href="#" class="btn btn-primary rounded-pill">Download CV</a> </div>
+              <a href="project_files/MAbdullah~PythonDeveloper.pdf" id="downloadButton"  class="btn btn-primary rounded-pill">Download CV</a> </div>
           </div>
         </div>
         <div class="brands-grid separator-border mt-5">
@@ -409,7 +409,7 @@
             </div>
           </div>
         </div>
-        <div class="text-center mt-5"><a href="#" class="btn btn-outline-secondary rounded-pill shadow-none">Download CV <span class="ms-1"><i class="fas fa-download"></i></span></a></div>
+        <div class="text-center mt-5"><a href="project_files/MAbdullah~PythonDeveloper.pdf" id="downloadButton" class="btn btn-outline-secondary rounded-pill shadow-none">Download CV <span class="ms-1"><i class="fas fa-download"></i></span></a></div>
       </div>
     </section>
     <!-- Resume end --> 
@@ -587,6 +587,7 @@
             <h2 class="mb-3 text-5 text-uppercase">Follow Me</h2>
             <ul class="social-icons justify-content-center justify-content-md-start">
               <li class="social-icons-fiverr fiver"><a data-bs-toggle="tooltip" href="https://twitter.com/" target="_blank" title="Fiverr"><svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="20px" height="20px"><circle cx="24" cy="24" r="20" fill="#66bb6a"/><path fill="#fff" d="M35.066,22.035v-0.959h-1.821l-0.8-0.014c-0.684,0-1.151,0.45-1.335,0.974v-0.959h-2.039V27.3 h2.039v-1.334v-2.066c0-0.62,0.503-1.123,1.123-1.123h0.795v4.523h2.039v-1.334v-2.066c0-0.62,0.503-1.123,1.123-1.123h1.012v-1.7 l-0.8-0.014C35.718,21.061,35.25,21.512,35.066,22.035z M20.56,21.206l-1.094,3.597l-1.093-3.597h-2.039l2.215,6.223h0.12h1.597 h0.12l2.213-6.223H20.56z M12.23,21.206v-0.415c0-0.364,0.294-0.658,0.658-0.658h1.287v-1.706h-1.767 c-1.223,0-2.216,0.991-2.216,2.216v0.564H9v1.649h1.192v4.572h2.039v-4.572h1.944v4.572h2.039v-4.572v-1.649h-2.039H12.23V21.206z M25.424,21.122h-0.248c-1.67,0-3.024,1.354-3.024,3.024v0.342c0,1.67,1.354,3.024,3.024,3.024h0.552 c1.143,0,2.122-0.706,2.524-1.705l-1.798-0.525c0,0-0.215,0.616-0.965,0.616c-0.847,0-1.295-0.463-1.354-0.989l0,0v-0.003 c-0.004-0.038-0.006-0.077-0.006-0.115h2.3h2.022v-0.643C28.448,22.476,27.094,21.122,25.424,21.122z M24.13,23.59 c0.025-0.559,0.485-1.006,1.051-1.006h0.194c0.565,0,1.026,0.446,1.051,1.006H24.13z"/><circle cx="38.852" cy="26.305" r="1.268" fill="#263238"/></svg></a></li>
+              <li class="social-icons-upwork"><a data-bs-toggle="tooltip" title="Upwork" href="https://www.upwork.com/freelancers/~01ec98ab1046ec8815?viewMode=1" target="_blank"><img src="images/upwork-icon.png" alt=""></a></li>
               <li class="social-icons-linkedin"><a data-bs-toggle="tooltip" href="https://www.linkedin.com/in/imabdi" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a></li>
               <li class="social-icons-github"><a data-bs-toggle="tooltip" href="https://github.com/mianx" target="_blank" title="GitHub"><i class="fab fa-github"></i></a></li>
               
@@ -783,6 +784,32 @@
 <!-- Custom Script --> 
 <script src="https://harnishdesign.net/demo/html/simonejs/theme.js"></script>
 <script src="js/theme.js"></script>
+
+<script>
+    // JavaScript to handle the button click event
+    document.getElementById("downloadButton").addEventListener("click", function (event) {
+        // Prevent the default behavior of the link (preventing navigation)
+        event.preventDefault();
+
+        // Get the URL of the file to download from the link's href attribute
+        var fileUrl = this.getAttribute("href");
+
+        // Create a temporary anchor element
+        var a = document.createElement("a");
+        a.style.display = "none";
+        document.body.appendChild(a);
+
+        // Set the URL of the file as the anchor's href and set the download attribute
+        a.href = fileUrl;
+        a.download = "MAbdullah_PythonDeveloper.pdf";
+
+        // Trigger a click event on the anchor to initiate the download
+        a.click();
+
+        // Remove the anchor from the document
+        document.body.removeChild(a);
+    });
+</script>
 
 </body>
 
