--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
           </ul>
         </div>
         <ul class="social-icons social-icons-muted social-icons-sm mt-lg-auto ms-auto ms-lg-0 d-flex">
-          <li class="social-icons-facebook"><a data-bs-toggle="tooltip" title="Upwork" href="http://www.upwork.com/" target="_blank"><img src="images/upwork.ico" alt="" width="18px" height="18px"></a></li>
+          <li class="social-icons-facebook"><a data-bs-toggle="tooltip" title="Upwork" href="https://www.upwork.com/freelancers/~01ec98ab1046ec8815" target="_blank"><img src="images/upwork.ico" alt="" width="18px" height="18px"></a></li>
           <li class="social-icons-fiverr"><a data-bs-toggle="tooltip" title="Fiverr" href="https://www.fiverr.com/mian_ab" target="_blank"><img src="images/fiverr.ico" alt="" width="18px" height="18px"></a></li>
-          <li class="social-icons-linkedin"><a data-bs-toggle="tooltip" title="LinkedIn" data-bs-placement="top" href="https://www.linkedin.com/in/imabdi" target="_blank"><img src="images/icons8-linkedin-18.png" alt=""></a></li>
-          <li class="social-icons-github"><a data-bs-toggle="tooltip" title="GitHub" data-bs-placement="top" href="https://github.com/mianx" target="_blank" ><img src="images/github.png" alt="" width="20px" height="20px"></a></li>
+          <li class="social-icons-linkedin"><a data-bs-toggle="tooltip" title="LinkedIn" data-bs-placement="top" href="https://www.linkedin.com/in/imabdi" target="_blank"><img src="images/Linkedin_circle.png" alt=""></a></li>
+          <li class="social-icons-github"><a data-bs-toggle="tooltip" title="GitHub" data-bs-placement="top" href="https://github.com/mianx" target="_blank" ><i class="fa-brands fa-github fa-lg"></i></a></li>
         </ul>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#header-nav"><span></span><span></span><span></span></button>
       </div>
