--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
           </ul>
         </div>
         <ul class="social-icons social-icons-muted social-icons-sm mt-lg-auto ms-auto ms-lg-0 d-flex">
-          <li class="social-icons-facebook"><a data-bs-toggle="tooltip" title="Upwork" href="https://www.upwork.com/freelancers/~01ec98ab1046ec8815" target="_blank"><img src="images/upwork.ico" alt="" width="18px" height="18px"></a></li>
-          <li class="social-icons-fiverr"><a data-bs-toggle="tooltip" title="Fiverr" href="https://www.fiverr.com/mian_ab" target="_blank"><img src="images/fiverr.ico" alt="" width="18px" height="18px"></a></li>
-          <li class="social-icons-linkedin"><a data-bs-toggle="tooltip" title="LinkedIn" data-bs-placement="top" href="https://www.linkedin.com/in/imabdi" target="_blank"><img src="images/Linkedin_circle.png" alt=""></a></li>
-          <li class="social-icons-github"><a data-bs-toggle="tooltip" title="GitHub" data-bs-placement="top" href="https://github.com/mianx" target="_blank" ><i class="fa-brands fa-github fa-lg"></i></a></li>
+          <li class="social-icons-facebook"><a data-bs-toggle="tooltip" title="Upwork" href="https://www.upwork.com/freelancers/~01ec98ab1046ec8815" target="_blank"><img src="images/upwork.ico" alt=""  width="15px" height="15px"></a></li>
+          <li class="social-icons-fiverr"><a data-bs-toggle="tooltip" title="Fiverr" href="https://www.fiverr.com/mian_ab" target="_blank"><img src="images/fiverr.ico" alt=""  width="15px" height="15px"></a></li>
+          <li class="social-icons-linkedin"><a data-bs-toggle="tooltip" title="LinkedIn" data-bs-placement="top" href="https://www.linkedin.com/in/imabdi" target="_blank"><img src="images/Linkedin_circle.png" alt="" width="15px" height="15px"></a></li>
+          <li class="social-icons-github"><a data-bs-toggle="tooltip" title="GitHub" data-bs-placement="top" href="https://github.com/mianx" target="_blank" ><i class="fa-brands fa-github"></i></a></li>
         </ul>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#header-nav"><span></span><span></span><span></span></button>
       </div>
@@ -433,12 +433,16 @@
           <li class="nav-item"> <a data-filter=".photos" href="#" class="nav-link">Backend Development</a></li>
         </ul>
         <!-- Filter Menu end -->
+        <!-- Add this to your HTML where you want the modal to appear -->
+
+
+
         <div class="portfolio popup-ajax-gallery">
           <div class="row portfolio-filter g-4">
             <div class="col-sm-6 col-lg-4 brand">
               <div class="portfolio-box rounded">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-1.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="project.html" ></a>
+                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="project_files\project.html" ></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
                       <span class="text-light">Category</span> </div>
@@ -449,7 +453,7 @@
             <div class="col-sm-6 col-lg-4 design">
               <div class="portfolio-box rounded">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-2.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://harnishdesign.net/demo/html/simone/ajax/portfolio-ajax-project-2.html"></a>
+                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="project_files/project.html"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
                       <span class="text-light">Category</span> </div>
@@ -460,7 +464,7 @@
             <div class="col-sm-6 col-lg-4 artwork photos">
               <div class="portfolio-box rounded">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-3.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://harnishdesign.net/demo/html/simone/ajax/portfolio-ajax-project-3.html"></a>
+                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="project_files/project.html"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
                       <span class="text-light">Category</span> </div>
@@ -588,8 +592,8 @@
             <ul class="social-icons justify-content-center justify-content-md-start">
               <li class="social-icons-whatsapp"><a data-bs-toggle="tooltip" href="https://github.com/mianx" target="_blank" title="Whatsapp"><i class="fa-brands fa-whatsapp"></i></a></li>
               <li class="social-icons-linkedin"><a data-bs-toggle="tooltip" href="https://github.com/mianx" target="_blank" title="Telegram"><i class="fa-brands fa-telegram"></i></a></li>
-              <li class="social-icons-fiverr fiver"><a data-bs-toggle="tooltip" href="https://twitter.com/" target="_blank" title="Fiverr"><svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="20px" height="20px"><circle cx="24" cy="24" r="20" fill="#66bb6a"/><path fill="#fff" d="M35.066,22.035v-0.959h-1.821l-0.8-0.014c-0.684,0-1.151,0.45-1.335,0.974v-0.959h-2.039V27.3 h2.039v-1.334v-2.066c0-0.62,0.503-1.123,1.123-1.123h0.795v4.523h2.039v-1.334v-2.066c0-0.62,0.503-1.123,1.123-1.123h1.012v-1.7 l-0.8-0.014C35.718,21.061,35.25,21.512,35.066,22.035z M20.56,21.206l-1.094,3.597l-1.093-3.597h-2.039l2.215,6.223h0.12h1.597 h0.12l2.213-6.223H20.56z M12.23,21.206v-0.415c0-0.364,0.294-0.658,0.658-0.658h1.287v-1.706h-1.767 c-1.223,0-2.216,0.991-2.216,2.216v0.564H9v1.649h1.192v4.572h2.039v-4.572h1.944v4.572h2.039v-4.572v-1.649h-2.039H12.23V21.206z M25.424,21.122h-0.248c-1.67,0-3.024,1.354-3.024,3.024v0.342c0,1.67,1.354,3.024,3.024,3.024h0.552 c1.143,0,2.122-0.706,2.524-1.705l-1.798-0.525c0,0-0.215,0.616-0.965,0.616c-0.847,0-1.295-0.463-1.354-0.989l0,0v-0.003 c-0.004-0.038-0.006-0.077-0.006-0.115h2.3h2.022v-0.643C28.448,22.476,27.094,21.122,25.424,21.122z M24.13,23.59 c0.025-0.559,0.485-1.006,1.051-1.006h0.194c0.565,0,1.026,0.446,1.051,1.006H24.13z"/><circle cx="38.852" cy="26.305" r="1.268" fill="#263238"/></svg></a></li>
-              <li class="social-icons-upwork"><a data-bs-toggle="tooltip" title="Upwork" href="https://www.upwork.com/freelancers/~01ec98ab1046ec8815?viewMode=1" target="_blank"><img src="images/upwork-icon.png" alt=""></a></li>
+              <!-- <li class="social-icons-fiverr fiver"><a data-bs-toggle="tooltip" href="https://twitter.com/" target="_blank" title="Fiverr"><svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="20px" height="20px"><circle cx="24" cy="24" r="20" fill="#66bb6a"/><path fill="#fff" d="M35.066,22.035v-0.959h-1.821l-0.8-0.014c-0.684,0-1.151,0.45-1.335,0.974v-0.959h-2.039V27.3 h2.039v-1.334v-2.066c0-0.62,0.503-1.123,1.123-1.123h0.795v4.523h2.039v-1.334v-2.066c0-0.62,0.503-1.123,1.123-1.123h1.012v-1.7 l-0.8-0.014C35.718,21.061,35.25,21.512,35.066,22.035z M20.56,21.206l-1.094,3.597l-1.093-3.597h-2.039l2.215,6.223h0.12h1.597 h0.12l2.213-6.223H20.56z M12.23,21.206v-0.415c0-0.364,0.294-0.658,0.658-0.658h1.287v-1.706h-1.767 c-1.223,0-2.216,0.991-2.216,2.216v0.564H9v1.649h1.192v4.572h2.039v-4.572h1.944v4.572h2.039v-4.572v-1.649h-2.039H12.23V21.206z M25.424,21.122h-0.248c-1.67,0-3.024,1.354-3.024,3.024v0.342c0,1.67,1.354,3.024,3.024,3.024h0.552 c1.143,0,2.122-0.706,2.524-1.705l-1.798-0.525c0,0-0.215,0.616-0.965,0.616c-0.847,0-1.295-0.463-1.354-0.989l0,0v-0.003 c-0.004-0.038-0.006-0.077-0.006-0.115h2.3h2.022v-0.643C28.448,22.476,27.094,21.122,25.424,21.122z M24.13,23.59 c0.025-0.559,0.485-1.006,1.051-1.006h0.194c0.565,0,1.026,0.446,1.051,1.006H24.13z"/><circle cx="38.852" cy="26.305" r="1.268" fill="#263238"/></svg></a></li> -->
+              <!-- <li class="social-icons-upwork"><a data-bs-toggle="tooltip" title="Upwork" href="https://www.upwork.com/freelancers/~01ec98ab1046ec8815?viewMode=1" target="_blank"><img src="images/upwork-icon.png" alt=""></a></li> -->
               <li class="social-icons-linkedin"><a data-bs-toggle="tooltip" href="https://www.linkedin.com/in/imabdi" target="_blank" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a></li>
               <!-- <li class="social-icons-github"><a data-bs-toggle="tooltip" href="https://github.com/mianx" target="_blank" title="GitHub"><i class="fab fa-github"></i></a></li> -->
 
@@ -741,78 +745,32 @@
 </div>
 <!-- Styles Switcher End --> 
 
+
 <!-- JavaScript --> 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="js/bootstrap.bundle.min.js"></script> 
-
+<script src="https://harnishdesign.net/demo/html/simone/vendor/jquery/jquery.min.js"></script> 
+<script src="https://harnishdesign.net/demo/html/simone/vendor/bootstrap/js/bootstrap.bundle.min.js"></script> 
 <!-- Easing --> 
-<!-- <script src="https://harnishdesign.net/demo/html/simone/vendor/jquery.easing/jquery.easing.min.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js" integrity="sha512-0QbL0ph8Tc8g5bLhfVzSqxe9GERORsKhIn1IrpxDAgUsbBGz/V7iSav2zzW325XGd1OMLdL4UiqRJj702IeqnQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
-
+<script src="https://harnishdesign.net/demo/html/simone/vendor/jquery.easing/jquery.easing.min.js"></script> 
 <!-- Appear --> 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.appear/0.4.1/jquery.appear.min.js" integrity="sha512-vYYoQJKYzaJQaOaYxaJhhmxikOJ2SEgHwmCNa0EMP0aRr7opdt4HHrorAwnCyPm8bdW/JBApIomo85YaBX81zA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<!-- <script src="https://harnishdesign.net/demo/html/simone/vendor/jquery.appear/jquery.appear.min.js"></script>  -->
-
+<script src="https://harnishdesign.net/demo/html/simone/vendor/jquery.appear/jquery.appear.min.js"></script> 
 <!-- Images Loaded --> 
-<!-- <script src="https://harnishdesign.net/demo/html/simone/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>  -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/5.0.0/imagesloaded.pkgd.min.js" integrity="sha512-kfs3Dt9u9YcOiIt4rNcPUzdyNNO9sVGQPiZsub7ywg6lRW5KuK1m145ImrFHe3LMWXHndoKo2YRXWy8rnOcSKg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+<script src="https://harnishdesign.net/demo/html/simone/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script> 
 <!-- Counter --> 
-<!-- <script src="https://harnishdesign.net/demo/html/simone/vendor/jquery.countTo/jquery.countTo.min.js"></script>  -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-countto/1.2.0/jquery.countTo.min.js" integrity="sha512-RXuJVZbGztKGYMNgmWU6oOHbUwYu+NnzovhT4lyW1kfmEfRK6CD1xL8U+0xACFqSkC3cxMugaaNEP8wWmvl4Jw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+<script src="https://harnishdesign.net/demo/html/simone/vendor/jquery.countTo/jquery.countTo.min.js"></script> 
 <!-- Parallax Bg --> 
 <script src="https://harnishdesign.net/demo/html/simone/vendor/parallaxie/parallaxie.min.js"></script> 
-
 <!-- Typed --> 
-<!-- <script src="https://harnishdesign.net/demo/html/simone/vendor/typed/typed.min.js"></script>  -->
-<script src="js/typed.min.js"></script>
-
+<script src="https://harnishdesign.net/demo/html/simone/vendor/typed/typed.min.js"></script> 
 <!-- Owl Carousel --> 
-<script src="https://harnishdesign.net/demo/html/simone/vendor/owl.carousel/owl.carousel.min.js"></script>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.js" integrity="sha512-9CWGXFSJ+/X0LWzSRCZFsOPhSfm6jbnL+Mpqo0o8Ke2SYr8rCTqb4/wGm+9n13HtDE1NQpAEOrMecDZw4FXQGg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>  -->
-
+<script src="https://harnishdesign.net/demo/html/simone/vendor/owl.carousel/owl.carousel.min.js"></script> 
 <!-- isotope Portfolio Filter --> 
-<!-- <script src="https://harnishdesign.net/demo/html/simone/vendor/isotope/isotope.pkgd.min.js"></script>  -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js" integrity="sha512-Zq2BOxyhvnRFXu0+WE6ojpZLOU2jdnqbrM1hmVdGzyeCa1DgM3X5Q4A/Is9xA1IkbUeDd7755dNNI/PzSf2Pew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+<script src="https://harnishdesign.net/demo/html/simone/vendor/isotope/isotope.pkgd.min.js"></script> 
 <!-- Magnific Popup --> 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js" integrity="sha512-IsNh5E3eYy3tr/JiX2Yx4vsCujtkhwl7SLqgnwLNgf04Hrt9BT9SXlLlZlWx+OK4ndzAoALhsMNcCmkggjZB1w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<!-- <script src="https://harnishdesign.net/demo/html/simone/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>  -->
-
+<script src="https://harnishdesign.net/demo/html/simone/vendor/magnific-popup/jquery.magnific-popup.min.js"></script> 
 <!-- Style Switcher --> 
-<!-- <script src="https://harnishdesign.net/demo/html/simonejs/switcher.min.js"></script>  -->
-<script src="js/switcher.min.js"></script> 
-
+<script src="https://harnishdesign.net/demo/html/simone/js/switcher.min.js"></script> 
 <!-- Custom Script --> 
-<script src="https://harnishdesign.net/demo/html/simonejs/theme.js"></script>
-<script src="js/theme.js"></script>
-
-<script>
-    // JavaScript to handle the button click event
-    document.getElementById("downloadButton").addEventListener("click", function (event) {
-        // Prevent the default behavior of the link (preventing navigation)
-        event.preventDefault();
-
-        // Get the URL of the file to download from the link's href attribute
-        var fileUrl = this.getAttribute("href");
-
-        // Create a temporary anchor element
-        var a = document.createElement("a");
-        a.style.display = "none";
-        document.body.appendChild(a);
-
-        // Set the URL of the file as the anchor's href and set the download attribute
-        a.href = fileUrl;
-        a.download = "MAbdullah_PythonDeveloper.pdf";
-
-        // Trigger a click event on the anchor to initiate the download
-        a.click();
-
-        // Remove the anchor from the document
-        document.body.removeChild(a);
-    });
-</script>
+<script src="https://harnishdesign.net/demo/html/simone/js/theme.js"></script>
 
 </body>
 
