--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
                 <div class="featured-box style-3 mb-5">
                   <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <img src="images/libraries/icons8-flask-50.png" alt=""></div>
                   <h3>Flask</h3>
-                  <!-- <p class="mb-0">Crafting the Digital Backbone of Tomorrow with Python-Powered Backend Magic</p> -->
                 </div>
               </div>
+
               <div class="col-md-3 col-sm-6 p-2">
                 <div class="featured-box style-3 mb-5">
                   <div class="featured-box-icon text-primary bg-white shadow-sm rounded"><img src="images/libraries/icons8-django-50.png" alt=""></div>
@@ -293,42 +293,36 @@
                   <!-- <p class="mb-0">Fueling Data-Driven Solutions: Building Intelligent Systems through Machine Learning Expertise.</p> -->
                 </div>
               </div>
+              
+            </div>
+
+            <div class="row">
               <div class="col-md-3 col-sm-6 p-2">
-                <div class="featured-box style-3 mb-5 mb-md-0">
+                  <div class="featured-box style-3 mb-5">
                   <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <img src="images/libraries/icons8-docker-50.png" alt=""> </div>
                   <h3>Dockers</h3>
-                  <!-- <p class="mb-0">Architecting Scalable and Cost-Efficient Serverless Solutions for Modern Applications.</p> -->
                 </div>
               </div>
-              <div class="col-md-3 col-sm-6 p-2">
-                <div class="featured-box style-3 mb-0">
+              <div class="col-md-3 col-sm-6 p-2 ">
+                <div class="featured-box style-3 mb-5">
                   <div class="featured-box-icon text-primary bg-white shadow-sm rounded"><img src="images/libraries/icons8-heroku-48.png" alt=""></div>
                   <h3>Heroku</h3>
                 </div>
               </div>
 
-              <div class="col-md-3 col-sm-6 p-2">
-                <div class="featured-box style-3 mb-0">
+              <div class="col-md-3 col-sm-6 p-2 ">
+                <div class="featured-box style-3 mb-5">
                   <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <img src="images/libraries/pandas.png" alt=""></div>
                   <h3>Pandas</h3>
                 </div>
               </div>
 
-              <!-- <div class="col-md-3 col-sm-6 p-2">
-                <div class="featured-box style-3 mb-0">
-                  <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <img src="images/libraries/icons8-numpy-50.png" alt=""></div>
-                  <h3>Numpy</h3>
-                </div>
-              </div> -->
-
               <div class="col-md-3 col-sm-6 p-2">
-                <div class="featured-box style-3 mb-0">
+                <div class="featured-box style-3 mb-5">
                   <div class="featured-box-icon text-primary bg-white shadow-sm rounded"> <img src="images/libraries/icons8-awslambda-48.png" alt=""> </div>
                   <h3>AWS Lambda</h3>
                 </div>
               </div>
-
-              
             </div>
           </div>
         </div>
