--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 <!-- Magnific Popup -->
 <link rel="stylesheet" type="text/css" href="https://harnishdesign.net/demo/html/simone/vendor/magnific-popup/magnific-popup.min.css" />
 <!-- Custom Stylesheet -->
-<link rel="stylesheet" type="text/css" href="https://harnishdesign.net/demo/html/simone/css/stylesheet.css" />
+<!-- <link rel="stylesheet" type="text/css" href="https://harnishdesign.net/demo/html/simone/css/stylesheet.css" /> -->
+<link rel="stylesheet" type="text/css" href="style.css" />
+
 <!-- Colors Css -->
 <link id="color-switcher" type="text/css" rel="stylesheet" href="#" />
 <!-- <link rel="style.css"> -->
@@ -50,8 +52,6 @@
   ============================ -->
   <header id="header" class="sticky-top"> 
     <!-- Navbar -->
-    
-
     <nav class="primary-menu navbar navbar-expand-lg navbar-dark bg-dark border-bottom-0">
       <div class="container-fluid position-relative h-100 flex-lg-column ps-3 px-lg-3 pt-lg-3 pb-lg-2">
         <a class="mb-lg-auto mt-lg-4" style="cursor: pointer;">
@@ -60,29 +60,15 @@
           </span>
           <h1 class="text-5 text-white text-center mb-0 d-lg-block">Abdullah Shahid</h1>
         </a>
-        <div id="header-nav" class="collapse navbar-collapse w-100 my-lg-auto ">
+        <div id="header-nav" class="collapse navbar-collapse w-100 my-lg-auto ">          
           <ul class="navbar-nav text-lg-center my-lg-auto py-lg-3">
-            <li class="nav-item">
-              <a class="nav-link  active" style="cursor: pointer;">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " style="cursor: pointer;">About Me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " style="cursor: pointer;">What I Do</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " style="cursor: pointer;">Resume</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " style="cursor: pointer;">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " style="cursor: pointer;">Testimonial</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " style="cursor: pointer;">Contact</a>
-            </li>
+            <li class="nav-item"><a class="nav-link smooth-scroll" href="#home">Home</a></li>
+            <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About Me</a></li>
+            <li class="nav-item"><a class="nav-link smooth-scroll" href="#services">What I Do</a></li>
+            <li class="nav-item"><a class="nav-link smooth-scroll" href="#resume">Resume</a></li>
+            <li class="nav-item"><a class="nav-link smooth-scroll active" href="#portfolio">Portfolio</a></li>
+            <li class="nav-item"><a class="nav-link smooth-scroll" href="#testimonial">Testimonial</a></li>
+            <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
           </ul>
         </div>
         <ul class="social-icons social-icons-muted social-icons-sm mt-lg-auto ms-auto ms-lg-0 d-flex">
