--- a/project_files/project.html
+++ b/project_files/project.html
@@ -7,7 +7,7 @@
   <div class="container ajax-container">
   <h2 class="text-6 font-weight-600 text-center mb-4">Youtube Bot</h2>
   <div class="row g-4">
-    <div class="col-md-7"> <img class="img-fluid" alt="" src="./project_files/project-4.jpg"> </div>
+    <div class="col-md-7"> <img class="img-fluid" alt="" src="../images/project-5.jpg"> </div>
     <div class="col-md-5">
       <h4 class="text-4 font-weight-600">Project Info:</h4>
       <p> Developed a youtube bot on object oriented approach where the role is to watch videos and do search engine optimization.</p>
