--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
   <header id="header" class="sticky-top"> 
     <!-- Navbar -->
     <nav class="primary-menu navbar navbar-expand-lg navbar-dark bg-dark border-bottom-0">
-      <div class="container-fluid position-relative h-100 flex-lg-column ps-3 px-lg-3 pt-lg-3 pb-lg-2">
+      <div class="container-fluid position-relative h-100 flex-lg-column ps-3 px-lg-3 pt-lg-3 pb-lg-2" style="margin-top: 2%;">
         <a class="mb-lg-auto mt-lg-4" style="cursor: pointer;">
           <span class="bg-dark-2 rounded-pill p-2 mb-lg-1 d-none d-lg-inline-block">
             <img class="img-fluid rounded-pill d-block" src="images/abdullah_profile.jpg" title="I'm Abdullah" alt="profile">
           </span>
-          <h1 class="text-5 text-white text-center mb-0 d-lg-block">Abdullah Shahid</h1>
+          <h1 class="text-5 text-white text-center mb-0 d-lg-block">M. Abdullah</h1>
         </a>
         <div id="header-nav" class="collapse navbar-collapse w-100 my-lg-auto ">          
           <ul class="navbar-nav text-lg-center my-lg-auto py-lg-3">
@@ -429,7 +429,7 @@
             <div class="col-sm-6 col-lg-4 brand">
               <div class="portfolio-box rounded">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-1.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="project_files\project.html" ></a>
+                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="http://127.0.0.1:8000/projects/32" ></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
                       <span class="text-light">Category</span> </div>
@@ -440,7 +440,7 @@
             <div class="col-sm-6 col-lg-4 design">
               <div class="portfolio-box rounded">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-2.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="project_files/project.html"></a>
+                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="http://127.0.0.1:8000/projects/32"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
                       <span class="text-light">Category</span> </div>
@@ -451,7 +451,7 @@
             <div class="col-sm-6 col-lg-4 artwork photos">
               <div class="portfolio-box rounded">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-3.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="project_files/project.html"></a>
+                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="http://127.0.0.1:8000/projects/32"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
                       <span class="text-light">Category</span> </div>
