--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="images/favicon.ico" rel="icon" />
 <title>Abdullah Shahid</title>
-<meta name="description" content="Simone is responsive bootstrap 5 one page personal portfolio html template.">
+<meta name="description" content="Abdullah Shahid Portfolio">
 <!-- <meta name="author" content="harnishdesign.net"> -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <!-- Web Fonts -->
