--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
           </div>
           <div class="col-md-8 col-xl-9 order-0 order-md-1">
             <h2 class="mb-3 text-5 text-uppercase text-center text-md-start">Send me a note</h2>
-			<form id="contact-form" action="http://127.0.0.1:8000/default/" method="post">
+			<form id="contact-form" action="https://backend-portfolio-abdi-6407a7883a23.herokuapp.com/" method="post">
               
 			  <div class="row g-4">
                 <div class="col-xl-6">
