--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
           <div class="col-md-8 col-xl-9 order-0 order-md-1">
             <h2 class="mb-3 text-5 text-uppercase text-center text-md-start">Send me a note</h2>
 			<form id="contact-form" action="https://backend-portfolio-abdi-6407a7883a23.herokuapp.com/" method="post">
-              
+        <input type="hidden" id="csrf-token">
 			  <div class="row g-4">
                 <div class="col-xl-6">
                     <input name="name" type="text" class="form-control" required placeholder="Name">
