--- a/index.html
+++ b/index.html
@@ -604,20 +604,24 @@
           </div>
           <div class="col-md-8 col-xl-9 order-0 order-md-1">
             <h2 class="mb-3 text-5 text-uppercase text-center text-md-start">Send me a note</h2>
-			<form id="contact-form" action="https://backend-portfolio-abdi-6407a7883a23.herokuapp.com/" method="post">
-        <input type="hidden" id="csrf-token">
+			<form id="contact-form" action="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/" method="post">
+        <!-- <input type="hidden" id="csrf-token"> -->
 			  <div class="row g-4">
                 <div class="col-xl-6">
-                    <input name="name" type="text" class="form-control" required placeholder="Name">
+                    <input name="name" id = "fName" type="text" class="form-control" required placeholder="Name">
                 </div>
                 <div class="col-xl-6">
-                    <input name="email" type="email" class="form-control" required placeholder="Email">
+                    <input name="email" id = "fMail" type="email" class="form-control" required placeholder="Email">
                 </div>
 				<div class="col">
-					<textarea name="form-message" class="form-control" rows="5" required placeholder="Tell us more about your needs........"></textarea>
+					<textarea name="form-message" id = "fMsg" class="form-control" rows="5" required placeholder="Tell us more about your needs........"></textarea>
 				</div>
               </div>
-			  
+              <div id="thank-you-message" class="alert alert-success alert-dismissible fade show text-start" style="display: none;">
+                <i class="fa fa-check-circle"></i> Thank you for contacting us and will be in touch with you very soon.
+                <button type="button" class="btn-close text-1 mt-1" data-bs-dismiss="alert"></button>
+             </div>
+            
               <p class="text-center mt-4 mb-0">
 				<button id="submit-btn" class="btn btn-primary rounded-pill d-inline-flex" type="submit">Send Message</button>
               </p>
