--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
             <div class="col-sm-6 col-lg-4 brand">
               <div class="portfolio-box rounded">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-1.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="http://127.0.0.1:8000/projects/32" ></a>
+                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/11" ></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
                       <span class="text-light">Category</span> </div>
@@ -438,10 +438,11 @@
                 </div>
               </div>
             </div>
+
             <div class="col-sm-6 col-lg-4 design">
               <div class="portfolio-box rounded">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-2.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="http://127.0.0.1:8000/projects/32"></a>
+                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/12"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
                       <span class="text-light">Category</span> </div>
@@ -452,7 +453,7 @@
             <div class="col-sm-6 col-lg-4 artwork photos">
               <div class="portfolio-box rounded">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-3.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="http://127.0.0.1:8000/projects/32"></a>
+                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/13"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
                       <span class="text-light">Category</span> </div>
@@ -463,7 +464,7 @@
             <div class="col-sm-6 col-lg-4 artwork brand photos">
               <div class="portfolio-box rounded">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-4.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://harnishdesign.net/demo/html/simone/ajax/portfolio-ajax-project-4.html"></a>
+                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/14"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
                       <span class="text-light">Category</span> </div>
@@ -471,10 +472,11 @@
                 </div>
               </div>
             </div>
+
             <div class="col-sm-6 col-lg-4 design">
               <div class="portfolio-box rounded">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-5.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://harnishdesign.net/demo/html/simone/ajax/portfolio-ajax-project-5.html"></a>
+                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/16"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
                       <span class="text-light">Category</span> </div>
@@ -482,6 +484,7 @@
                 </div>
               </div>
             </div>
+
             <div class="col-sm-6 col-lg-4 brand">
               <div class="portfolio-box rounded">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-6.jpg" alt="">
@@ -493,10 +496,11 @@
                 </div>
               </div>
             </div>
+
             <div class="col-sm-6 col-lg-4 design photos">
               <div class="portfolio-box rounded">
                 <div class="portfolio-img rounded"> <img class="img-fluid d-block" src="https://harnishdesign.net/demo/html/simone/images/projects/project-7.jpg" alt="">
-                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://harnishdesign.net/demo/html/simone/ajax/portfolio-ajax-project-7.html"></a>
+                  <div class="portfolio-overlay"> <a class="popup-ajax stretched-link" href="https://flask-backend-portfolio-abdi-e0d314dab24d.herokuapp.com/project/15"></a>
                     <div class="portfolio-overlay-details">
                       <h5 class="text-white fw-400">Project Title</h5>
                       <span class="text-light">Category</span> </div>
